Progress on contact page

--- a/projects.html
+++ b/projects.html
@@ -1,84 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link href="styles/style.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/220fe8c60c.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <header>
-        <nav class="navbar">
-            <img src="images/cloud.png" alt="abstract logo">
-            <ul class="nav-links">
-                <!--Check this code before sending-->
-                <input type="checkbox" id="checkbox_toggle" />
-                <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-                <div class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Projects</title>
+        <link href="style.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/220fe8c60c.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header>
+            <nav class="navbar">
+                <img src="images/cloud.png" alt="abstract logo">
+                <ul class="nav-links">
+                    <!--Check this code before sending-->
+                    <input type="checkbox" id="checkbox_toggle">
+                    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                    <div class="menu">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="about.html">About</a>
+                        </li>
+                        <li>
+                            <a href="projects.html">Projects</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="title">
+                <h1>Projects</h1>
+            </section>
+            <section class="general-info">
+                <h2>Latest Projects</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ullamcorper arcu ac semper tincidunt. Mauris convallis mi ac leo efficitur, nec porttitor arcu semper. Maecenas rhoncus, nulla nec interdum rutrum, ante enim lacinia sapien, et euismod sem ligula et erat. Maecenas elementum mollis neque. Ut sit amet dignissim arcu. Duis lacinia, orci eget lacinia consectetur, felis eros commodo turpis, eu tempus justo dolor vitae lacus. Sed id nunc a ipsum blandit semper nec sit amet elit. Quisque pellentesque lobortis libero, a pellentesque mi malesuada vel.</p>
+                <div class="two-column">
+                    <div>
+                        <img src="images/apple-watch-product.png" alt="an apple watch with several apps" title="Photo by Daniel Korpai at Unplash">
+                        <p>ColorFlow App for apple watch</p>
+                    </div>
+                    <div>
+                        <img src="images/digital-products.png" alt="a desktop, a tablet and a smartphone with advertising for digital products" title="Photo by Daniel Korpai at Unplash">
+                        <p>Digitify Hub for desktop, tablet and smartphone</p>
+                    </div>
                 </div>
-            </ul>
-        </nav>
-        <h1>Projects</h1>
-    </header>
-    <main>
-        <section class="general-info">
-            <h2>Latest Projects</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ullamcorper arcu ac semper tincidunt. Mauris convallis mi ac leo efficitur, nec porttitor arcu semper. Maecenas rhoncus, nulla nec interdum rutrum, ante enim lacinia sapien, et euismod sem ligula et erat. Maecenas elementum mollis neque. Ut sit amet dignissim arcu. Duis lacinia, orci eget lacinia consectetur, felis eros commodo turpis, eu tempus justo dolor vitae lacus. Sed id nunc a ipsum blandit semper nec sit amet elit. Quisque pellentesque lobortis libero, a pellentesque mi malesuada vel.</p>
-            <div>
-                <img src="images/test1.png" alt="test1">
-                <p>Short description</p>
-                <img src="images/test2.png" alt="test1">
-                <p>Short description</p>
+            </section>
+            <section class="projects">
+                <h2>Other Projects</h2>
+                <div class="four-columns">
+                    <img src="images/music-product.png" alt="a phone with a music app" title="Photo by Kenny Eliason at Unsplash">
+                    <img src="images/apple-watch-music-product.png" alt="an apple watch with a music app" title="Photo by Luke Chesser at Unsplash">
+                    <img src="images/coin-view-product.png" alt="a phone with the coin view app" title="Photo by CoinViewApp at Unsplash">
+                    <img src="images/finantial-product.png" alt="a computer with a finantial website" title="Photo by Carlos Muza at Unsplash">
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="main-footer-section">
+                <div>
+                    <i class="fa-solid fa-phone"></i>
+                    <br>
+                    <a href="tel:+2898233042">(289) 823 3042</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-envelope"></i>
+                    <br>
+                    <a href="diana.maldonado130@gmail.com">diana.maldonado130@gmail.com</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <address>497 Evergreen Rd.
+                        <br> Welland, ON L3C4T2
+                    </address>
+                </div>
             </div>
-        </section>
-
-        <section class="other-projects">
-            <h2>Other Projects</h2>
-            <div>
-                <img src="images/test1.png" alt="test1">
-                <img src="images/test2.png" alt="test1">
-                <img src="images/test1.png" alt="test1">
-                <img src="images/test2.png" alt="test1">
+            <div class="footer-social-networks">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-instagram"></i>
             </div>
-        </section>
-    </main>
-    <footer>
-        <div class="main-footer-section">
-            <div>
-                <i class="fa-solid fa-phone"></i>
-                <br>
-                <a href="tel:+2898233042">(289) 823 3042</a>
-            </div>
-
-            <div>
-                <i class="fa-solid fa-envelope"></i>
-                <br>
-                <a href="diana.maldonado130@gmail.com">diana.maldonado130@gmail.com</a>
-            </div>
-
-            <div>
-                <i class="fa-solid fa-location-dot"></i>
-                <address>497 Evergreen Rd. <br> Welland, ON L3C4T2</address>
-            </div>
-        </div>
-
-        <div class="footer-social-networks">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-instagram"></i>
-        </div>
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
